[Update] transformer review

--- a/transformer/transformer.ipynb
+++ b/transformer/transformer.ipynb
@@ -52,6 +52,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "- Attention은 두 가지가 있다.\n",
+    "  - additive attention\n",
+    "    - dot-product attention과 다르게 scaling 과정이 없다.\n",
+    "  - dot-product attention\n",
+    "- 또한, 두 알고리즘의 차이는 시간이다. dot-product attention이 matrix multiplication에 대한 최적화가 많이 되어있기 때문에 더 빠르다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Computation"
    ]
   },
@@ -174,6 +185,15 @@
     "- K와 V는 attention의 위치와 관계없이 같은 값을 가진다.\n",
     "- 그리고, Q와 K의 dot-product는 Q와 K사이의 유사도를 구하는 것이다.\n",
     "- 따라서 cosine similarity를 구하고 softmax를 통과시킨 값을 V에 곱해주면 중요한 V일수록 더 높은 값을 가지게 된다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- **Query(Q)는 각각의 query가 어떤 단어와 연관 되어 있는지 알기 위해서 모든 key(K)와 연산한다. 위 연산을 보면 query와 key가 dot-product하고 softmax를 취한다. 이것은 하나의 query가 모든 key와의 연관성을 계산하고, 그 값을 확률(softmax)로 바꿔준다. 이 결과로 query가 어떤 key와 얼마나 연관을 가지는지 알 수 있다.**\n",
+    "- **이렇게 구한 확률값을 value(V)에 곱해서 value에 대해서 scaling 한다.**\n",
+    "- **key와 value는 같은 단어를 의미하지만 두 개로 나뉜 것은 key는 각 단어와 연관성을 확률로 나타내고, value는 그 확률을 이용해서 attention 값을 계산하기 위해서 사용한다.**"
    ]
   },
   {
@@ -335,6 +355,23 @@
     "- 위 식을 \\\\(PE_{pos + k}\\\\)는 \\\\(PE_{pos}\\\\)의 Linear function으로 나타내면,<br><br>\n",
     "$$ PE_{(pos+k, 2i)}=sin(\\frac{pos+k}{c})=sin(\\frac{pos}{c})cos(\\frac{k}{c})+cos(\\frac{pos}{c})sin(\\frac{k}{c}) =PE_{(pos,2i)}cos(\\frac{k}{c})+cos(\\frac{pos}{c})sin(\\frac{k}{c}) $$<br>\n",
     "$$ PE_{(pos+k, 2i+1)}=cos(\\frac{pos+k}{c})=cos(\\frac{pos}{c})cos(\\frac{k}{c})-sin(\\frac{pos}{c})sin(\\frac{k}{c}) =PE_{(pos,2i+1)}cos(\\frac{k}{c})-sin(\\frac{pos}{c})sin(\\frac{k}{c}) $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 왜 self-attention만 사용해서도 가능한가?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- layer마다 전체 연산량이 줄어든다.\n",
+    "- 앞서 언급한 것과 같이 Recurrent Neural Network과 달리 병렬화가 가능하기 때문에 연산을 빨리 할 수 있다.\n",
+    "- long-range term들의 dependency도 잘 학습 가능하다.\n",
+    "- 부가적으로, model 자체를 이해하기도 쉽다는 것이다."
    ]
   },
   {
