[Update] transformer review

--- a/transformer/transformer.ipynb
+++ b/transformer/transformer.ipynb
@@ -385,7 +385,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[참조 블로그](https://pozalabs.github.io/transformer/)"
+    "[참조 블로그](https://pozalabs.github.io/transformer/)<br>\n",
+    "[Transformers 참조 블로그](https://reniew.github.io/43/)"
    ]
   },
   {
